Formularios con validaciones. Añadido a Spring Validation

--- a/springmvcbasico/src/main/resources/templates/producto.html
+++ b/springmvcbasico/src/main/resources/templates/producto.html
@@ -2,15 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Producto</title>
 </head>
 <body>
 
 <form method="post" th:object="${producto}">
 	<input type="number" th:field="*{id}"  placeholder=ID />
+	<span th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></span>
+	
 	<input type="text" th:field="*{nombre}" placeholder="Nombre" />
+	<span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></span>
+	
 	<input type="number" step=".01" th:field="*{precio}" placeholder="Precio" />
+	<span th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}"></span>
+	
 	<input type="date" th:field="*{fechaIncorporacion}" placeholder="Fecha de incorporación" />
+	<span th:if="${#fields.hasErrors('fechaIncorporacion')}" th:errors="*{fechaIncorporacion}"></span>
 	<button>Aceptar</button>
 </form>
 
