Uso de tablas propias para usuarios y contraseñas

--- a/springsecurityejemplo/src/main/resources/templates/home.html
+++ b/springsecurityejemplo/src/main/resources/templates/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Spring Security Example</title>
+        <title>Ejemplo Spring Security</title>
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <h1>Bienvenido colega!</h1>
         
-        <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+        <p>Haz click <a th:href="@{/hello}">aquí</a> para ver el saludo.</p>
     </body>
 </html>
