--- a/concesionario/src/main/resources/templates/alta.html
+++ b/concesionario/src/main/resources/templates/alta.html
@@ -1,9 +1,13 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{_plantilla :: estructura(~{::body})}" lang="es">
+<head>
+<title>Principal</title>
+</head>
 
-<%@ include file="/WEB-INF/vistas/includes/cabecera.jsp" %>
+<body>
 
-<form  action ="agregar" method="post">
+	<form  action ="agregar" method="post">
  	<h2>Alta</h2>
  	
  	<div class="form-row">	
@@ -11,9 +15,6 @@
         <div class="form-group col-md-4">
       		<label for="marca">Marca</label>
     		<select class="custom-select mr-sm-2" id="marca" name="marca">
-                    <%-- <c:forEach items="${marcas}" var="m" 
-                         <option value="${m.id}">${m.nombre}</option>
-                    </c:forEach>--%>
                     <option value="1">Citroen</option>
                     <option value="2">Renault</option>
                     <option value="3">Seat</option>
@@ -34,7 +35,7 @@
 
     	<div class="form-group col-md-2">
       		<label for="matricula">Matrícula</label>
-      		<input type="text" class="form-control" id="matricula" name="matricula" required title="La matricula es obligatoria">
+      		<input type="text" class="form-control" id="matricula" name="matricula" required pattern="[a-z]+" title="Las calorias deben ser un numero entero">
     	</div>
   	</div>
 
@@ -47,6 +48,13 @@
 	</div>
 	
 </form>
-  
- 
-<%@ include file="/WEB-INF/vistas/includes/pie.jsp" %>
+
+</body>
+</html>
+
+
+
+
+
+
+
