--- a/concesionario/src/main/resources/templates/alta.html
+++ b/concesionario/src/main/resources/templates/alta.html
@@ -7,47 +7,64 @@
 
 <body>
 
-	<form  action ="agregar" method="post">
- 	<h2>Alta</h2>
+    <div class="container" role="main">
+      <div class="row">
+          <div class="col-sm-3" style="background-color:#007bff">
+			<div class="list-group">
+  				<a href="alta" class="list-group-item" style="background-color:#007bff; border:none; color:white">
+    				Alta coche
+  				</a>
+  				<a href="listado" class="list-group-item" style="background-color:#007bff; border:none; color:black">Listado coches</a>
+  			</div>
+          </div>
+          <div class="col-sm-9">
+          
+			<form  action ="alta" method="post">
+ 				<h2>Alta</h2>
  	
- 	<div class="form-row">	
+ 				<div class="form-row">	
 
-        <div class="form-group col-md-4">
-      		<label for="marca">Marca</label>
-    		<select class="custom-select mr-sm-2" id="marca" name="marca">
-                    <option value="1">Citroen</option>
-                    <option value="2">Renault</option>
-                    <option value="3">Seat</option>
-     	 	</select>
-    	</div>
+        			<div class="form-group col-md-4">
+      					<label for="marca">Marca</label>
+    					<select class="custom-select mr-sm-2" id="marca" name="marca">
+                    		<option value="1">Citroen</option>
+                    		<option value="2">Renault</option>
+                    		<option value="3">Seat</option>
+     	 				</select>
+    				</div>
 
-  	</div>
+  				</div>
   	
-  	<div class="form-row">
-    	<div class="form-group col-md-10">
-      		<label for="modelo">Modelo</label>
-      		<input type="text" class="form-control" id="modelo" name="modelo" required title="El modelo es obligatorio">
-    	</div>
+  				<div class="form-row">
+    				<div class="form-group col-md-10">
+      					<label for="modelo">Modelo</label>
+      					<input type="text" class="form-control" id="modelo" name="modelo" required title="El modelo es obligatorio">
+    				</div>
 
-  	</div>
+  				</div>
   	
-  	<div class="form-row">
+  				<div class="form-row">
 
-    	<div class="form-group col-md-2">
-      		<label for="matricula">Matrícula</label>
-      		<input type="text" class="form-control" id="matricula" name="matricula" required pattern="[a-z]+" title="Las calorias deben ser un numero entero">
-    	</div>
-  	</div>
+    				<div class="form-group col-md-2">
+      					<label for="matricula">Matrícula</label>
+      					<input type="text" class="form-control" id="matricula" name="matricula" required pattern="[a-z]+" title="Las calorias deben ser un numero entero">
+    				</div>
+  				</div>
 
 
   	
-  	<div class="form-row">
-    	<div class="col-auto my-1">
-    		<button type="submit" class="btn btn-primary">Aceptar</button>
-    	</div>
-	</div>
+  				<div class="form-row">
+    				<div class="col-auto my-1">
+    					<button type="submit" class="btn btn-primary">Aceptar</button>
+    				</div>
+				</div>
 	
-</form>
+		    </form>
+          </div>
+      </div>
+    </div>
+
+
 
 </body>
 </html>
