--- a/concesionario/src/main/resources/templates/_plantilla.html
+++ b/concesionario/src/main/resources/templates/_plantilla.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 	<header>
+	 <div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
@@ -27,7 +28,7 @@
 
 		</nav>
 
-
+	</div>
 	</header>
 	
 
