--- a/concesionario/src/main/resources/templates/listado.html
+++ b/concesionario/src/main/resources/templates/listado.html
@@ -3,49 +3,69 @@
 	th:replace="~{_plantilla :: estructura(~{::body})}" lang="es">
 <head>
 <title>Listado de coches por marca</title>
+<script src="https://code.jquery.com/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<form action="listado" method="post">
-<h2>Listado</h2>
- 	<div class="form-row">	
+    <div class="container" role="main">
+      <div class="row">
+          <div class="col-sm-3" style="background-color:#007bff">
+			<div class="list-group">
+  				<a href="alta" class="list-group-item" style="background-color:#007bff; border:none; color:black">
+    				Alta coche
+  				</a>
+  				<a href="listado" class="list-group-item" style="background-color:#007bff; border:none; color:white">Listado coches</a>
+  			</div>
+          </div>
+          <div class="col-sm-9">
+          
+			<form action="listado" method="post">
+			
+				<h2>Listado</h2>
+ 				<div class="form-row">	
 
-    	<div class="col-auto my-1">
-    		Marca
-    	</div>
+    				<div class="col-auto my-1">
+    					Marca
+    				</div>
     	
-        <div class="form-group col-md-4">
+        			<div class="form-group col-md-4">
   
-    		<select class="custom-select mr-sm-2" id="marca" name="marca">
-                    <option value="1">Citroen</option>
-                    <option value="2">Renault</option>
-                    <option value="3">Seat</option>
-     	 	</select>
-    	</div>
+    					<select class="custom-select mr-sm-2" id="marca" name="marca">
+                    		<option value="1">Citroen</option>
+                    		<option value="2">Renault</option>
+                    		<option value="3">Seat</option>
+     	 				</select>
+    				</div>
     	
-    	<div class="col-auto my-1">
-    		<button type="submit" class="btn btn-primary">Consultar</button>
-    	</div>
+    				<div class="col-auto my-1">
+    					<button type="submit" class="btn btn-primary">Consultar</button>
+    				</div>
 
-  	</div>
+  				</div>
   	
-<div class="table-responsive">
-	<table class="table table-striped table-bordered table-hover table-sm">
-		<thead>
-			<tr>
-				<th scope="col">Modelo</th>
-				<th scope="col">Matrícula</th>
-			</tr>
-		</thead>
-		<tbody>
-			<c:forEach items="${coches}" var="c"> 
-					<td>${c.modelo}</td>
-					<td>${c.matricula}</td>		
-			</c:forEach>
-		</tbody>
-	</table>
-	
-	
-</form>
+				<div class="table-responsive">
+					<table class="table table-striped table-bordered table-hover table-sm">
+						<thead>
+							<tr>
+								<th scope="col">Modelo</th>
+								<th scope="col">Matrícula</th>
+							</tr>
+						</thead>
+						<tbody>
+							<!--<c:forEach items="${coches}" var="c">   -->
+							<tr data-th-each="coche: ${coches}"> 
+								<td>${coche.modelo}</td>
+								<td>${coche.matricula}</td>		
+							</tr>
+						</tbody>
+					</table>
 
+		    </form>
+          </div>
+      </div>
+    </div>
 </body>
 </html>
