--- a/concesionario/src/main/resources/templates/listado.html
+++ b/concesionario/src/main/resources/templates/listado.html
@@ -32,12 +32,10 @@
     				</div>
     	
         			<div class="form-group col-md-4">
-  
-    					<select class="custom-select mr-sm-2" id="marca" name="marca">
-                    		<option value="1">Citroen</option>
-                    		<option value="2">Renault</option>
-                    		<option value="3">Seat</option>
-     	 				</select>
+						
+						<select class="form-control">
+    						<option th:each="marca: ${marcas}" th:value="${marca.id}" th:text="${marca.nombre}"></option>
+						</select>
     				</div>
     	
     				<div class="col-auto my-1">
@@ -55,10 +53,9 @@
 							</tr>
 						</thead>
 						<tbody>
-							<!--<c:forEach items="${coches}" var="c">   -->
-							<tr data-th-each="coche: ${coches}"> 
-								<td>${coche.modelo}</td>
-								<td>${coche.matricula}</td>		
+							<tr th:each="coche: ${coches}">
+								<td th:text="${coche.modelo}">MODELO DEL COCHE</td>
+								<td th:text="${coche.matricula}">MATRICULA DEL COCHE</td>									
 							</tr>
 						</tbody>
 					</table>
