--- a/concesionario/src/main/resources/templates/alta.html
+++ b/concesionario/src/main/resources/templates/alta.html
@@ -44,7 +44,7 @@
   				<div class="form-row">
 
     				<div class="form-group col-md-6">
-      					<label for="matricula">Matrícula</label>
+      					<label for="matricula">MatrÃ­cula</label>
       					<input type="text" class="form-control" id="matricula" name="matricula" required pattern="[a-z]+" title="Las calorias deben ser un numero entero">
     				</div>
   				</div>
