--- a/concesionario/src/main/resources/templates/_plantilla.html
+++ b/concesionario/src/main/resources/templates/_plantilla.html
@@ -21,7 +21,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<img src="teknei.png">
+					<img src="https://www.teknei.com/wp-content/uploads/2018/12/Teknei-logo-web.png">
 				</li>
 			</ul>
 			
