--- a/concesionario/src/main/resources/templates/alta.html
+++ b/concesionario/src/main/resources/templates/alta.html
@@ -19,7 +19,7 @@
           </div>
           <div class="col-sm-9">
           
-			<form  th:action="listado" th:object="${coche}" method="post">
+			<form  th:action="alta" th:object="${coche}" method="post">
  				<h2>Alta</h2>
  	
  				<div class="form-row">	
