--- a/concesionario/src/main/resources/templates/alta.html
+++ b/concesionario/src/main/resources/templates/alta.html
@@ -11,6 +11,7 @@
       <div class="row">
           <div class="col-sm-3" style="background-color:#007bff">
 			<div class="list-group">
+				<a href="inicio" class="list-group-item" style="background-color:#007bff; border:none; color:black">Inicio</a>
   				<a href="alta" class="list-group-item" style="background-color:#007bff; border:none; color:white">
     				Alta coche
   				</a>
