Hecho el apaño para poder manejar filenet

--- a/concesionario/src/main/resources/templates/listado.html
+++ b/concesionario/src/main/resources/templates/listado.html
@@ -50,11 +50,11 @@
     				</div>
     	
     				<div class="col-auto my-1">
-    					<button type="submit" class="btn btn-primary">Consultar</button>
+    					<button type="submit" value="listar" id="listado" class="btn btn-primary">Consultar</button>
     				</div>
     				
     				<div class="col-auto my-1">
-    					<button type="submit" class="btn btn-primary">Subir a Filenet</button>
+    						<a th:href="|filenet|" class="btn btn-primary">Subir a Filenet</a>
     				</div>
 
   				</div>
@@ -76,6 +76,7 @@
 					</table>
 
 		    </form>
+		
           </div>
       </div>
     </div>
